# Tasker

./: .env  .gitignore  docker-compose.yaml  update-env.sh
backend/: .dockerignore  .env  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: api.py  consumer.py  models.py  routing.py  schemas.py  signals.py  tasks.py  types.py
backend/app/migrations/: 0001_initial.py  0002_notification.py  0003_alter_notification_task.py  0004_alter_notification_task.py
backend/core/: api.py  asgi.py  auth.py  celery.py  schemas.py  settings.py
backend/core/middleware/: websocket.py
docker/db/: postmaster.pid
docker/db/global/: 1260  pg_control  pg_internal.init
docker/db/pg_xact/: 0000
frontend/: .gitignore  Dockerfile  entrypoint.sh  eslint.config.mjs  middleware.ts  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  react-table.d.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/components/: add-task.tsx  app-sidebar.tsx  nav-user.tsx  notification-card.tsx  providers.tsx  websocket.tsx
frontend/components/email/: forgot-password.tsx
frontend/components/icons/: github.tsx
frontend/components/kanban/: column.tsx  index.tsx  task-card.tsx
frontend/hooks/: use-websocket.tsx
frontend/lib/: TaskServiceWrapper.ts  auth-client.ts  auth.ts  labels.ts  utils.ts
frontend/services/: sdk.gen.ts  types.gen.ts
(+246 files in other folders)
